Endpoint Prefix & Idempotency Token Auto-fill, and Authentication Bugfixes (#1518)
* Ensure TopDownIndex is used when iterating service operations
* Temporary Model Fix Transforms for Location Service
* Fixed Idempotency Token Autofill
* Fixed Endpoint Prefix Bug
* Add Changelog Annotations